Started bashing out where clause, but decided to change direction: going to simplify the object structure of the where clause until I can find a better way of expressing it, and focus on other areas first.

--- a/FluentMySql/FluentMySql.csproj
+++ b/FluentMySql/FluentMySql.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Core\Name.cs" />
     <Compile Include="Core\QualifiedName.cs" />
+    <Compile Include="Op.cs" />
+    <Compile Include="Param.cs" />
     <Compile Include="SelectExpressionList.cs" />
     <Compile Include="SelectQuery_Select.cs" />
     <Compile Include="CustomTableReference.cs" />
